<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".events.CreateEventActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:maxHeight="300dp"
        android:id="@+id/eventBanner"
        android:onClick="loadImage"
        android:src="@drawable/ic_add_white_24dp"
        android:background="@color/black_overlay"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/event_name"
                android:id="@+id/eventName"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="3"
                android:hint="@string/event_headline"
                android:inputType="text"
                android:id="@+id/eventHeadline"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="5"
                android:hint="@string/event_description_140_characters"
                android:inputType="textMultiLine"
                android:id="@+id/eventDescription"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/venue"
                android:inputType="text"
                android:id="@+id/eventVenue"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_cost"
                android:inputType="number"
                android:id="@+id/eventCost"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_of_participants"
                android:inputType="number"
                android:id="@+id/eventParticipants"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_number_1"
                android:inputType="number"
                android:id="@+id/eventContactOne"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_number_2"
                android:inputType="number"
                android:id="@+id/eventContactTwo"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/eventDate"
                android:onClick="pickDateTime"
                android:clickable="true"
                android:focusable="false"
                android:hint="Date"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/eventTime"
                android:onClick="pickDateTime"
                android:clickable="true"
                android:focusable="false"
                android:hint="Time"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>