<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@mipmap/singin"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#6F000000"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BITCSE"
                android:textColor="@color/colorAccent"
                android:textSize="80sp"
                android:fontFamily="sans-serif-condensed"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin_help"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:fontFamily="sans-serif-condensed"/>
        </LinearLayout>
        <EditText
            android:id="@+id/usn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColorHint="@color/colorAccent"
            android:singleLine="true"
            android:inputType="textCapCharacters"
            android:hint="@string/prompt_USN"
            android:textColor="@color/colorAccent"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColorHint="@color/colorAccent"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/prompt_password"
            android:textColor="@color/colorAccent"/>
        <Button
            android:layout_width="match_parent"
            android:id="@+id/sign_in_button"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:onClick="loginUser"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up"
            android:text="@string/action_register"
            android:onClick="registerUser"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingTop="20dp"
                android:text="Forgot Password?"
                android:onClick="resetPassword"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingTop="20dp"
                android:text="@string/help_word"
                android:textColor="@color/colorAccent"
                android:onClick="goToHelpScreen"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>